--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -73,7 +73,7 @@
 .dark-mode #map-info {
   margin: auto;
   height: 80px;
-  width: 260px;
+  width: 300px;
   background-color: #021b32ff;
 }
 
@@ -134,6 +134,10 @@ ol#hints {
 .cursor-pointer {
   cursor: pointer;
   margin-bottom: -5px;
+}
+
+.width300 {
+  width: 300px;
 }
 
 /* Add CSS that starts with pac is for the search bar on the createGame.html page map */
