--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -143,7 +143,8 @@
 }
 
 #extra-margin {
-  margin: 40px;
+  margin: 25px;
+  margin-right: 0;
   width: 47%;
 }
 
@@ -186,10 +187,10 @@ input {
 /* Sets the map to about half of the screen height */
 #map {
   float: right;
-  margin: 40px;
+  margin: 25px;
   border: thin solid black;
   height: 45vw;
-  width: 47%;
+  width: 46%;
 }
 
 /* Sets the map the user plays on to the height of the screen */
