--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -351,7 +351,7 @@ ol#hints {
   text-overflow: ellipsis;
 }
 
-#customBtn {
+#customBtn, #customBtn2 {
   display: inline-block;
   background: white;
   color: #444;
@@ -362,7 +362,7 @@ ol#hints {
   line-height: 60px;
 }
 
-#customBtn:hover {
+#customBtn:hover, #customBtn2:hover {
   cursor: pointer;
 }
 
