--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -53,7 +53,8 @@
 .light-mode #addHint, 
 .light-mode #addStage,
 .light-mode #play-game-button,
-.light-mode #more-maps {
+.light-mode #more-maps,
+.light-mode #back-home {
   background: #74d3aeff;
 }
 
@@ -122,8 +123,9 @@
 .dark-mode #finish, 
 .dark-mode #addHint,
 .dark-mode #addStage,
-.dark-mode #play-game-button, 
-.dark-mode #more-maps {
+.dark-mode #play-game-button,
+.dark-mode #more-maps,
+.dark-mode #back-home  {
   background: #32908F;
 }
 
@@ -136,12 +138,12 @@
   width: 25%;
 }
 
-#finish, #addHint, #addStage, #stages input, #play-game-button, #more-maps  {
+#finish, #addHint, #addStage, #stages input, #play-game-button, #more-maps, #back-home  {
   border: 0px;
   border-radius: 7px;
   height: 30px;
   margin: 5px;
-  font-size: 1.5em;
+  font-size: 1em;
 }
 
 #extra-margin {
@@ -155,7 +157,7 @@
   border-radius: 7px;
   height: 50px;
   margin-left: 15px;
-  font-size: 2em;
+  font-size: 1em;
 }  
 
 #featured-map {
@@ -391,4 +393,12 @@ span.buttonText {
   /* Use the Roboto font that is loaded in the <head> */
   font-family: 'Roboto', sans-serif;
 }
-    
+
+.font-size-slightly-larger {
+  font-size: 1.2em;
+}
+
+#legend p {
+ margin: 0;
+ padding: 0;
+}
