--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -141,7 +141,7 @@ nav .brand-logo {
   margin-left: 10px;
 }
 
-#finish, #addHint, #addStage, #stages input,  #more-maps, #back-home {
+#finish, #addHint, #addStage, #stages input,  #more-maps {
   border: 0px;
   border-radius: 7px;
   height: 30px;
@@ -149,7 +149,7 @@ nav .brand-logo {
   font-size: 1.6em;
 }
 
-#play-game-button {
+#play-game-button, #back-home {
   border: 0px;
   border-radius: 7px;
   height: 50px;
@@ -337,7 +337,7 @@ ol#hints {
 }
 
 #enter-key-text {
-  font-size: 12px;
+  font-size: 16px;
   margin-bottom: 5px;
 }
 
@@ -352,12 +352,12 @@ ol#hints {
   border: 0px;
   margin-left: 15px;
   border-radius: 7px;
-  font-size: 12px;
+  font-size: 14px;
 }
 
 #hints-container {
   margin-top: 30px;
-  font-size: 15px;
+  font-size: 16px;
   overflow: scroll;
   max-height: calc(100% - 220px);
 }
@@ -380,7 +380,6 @@ ol#hints {
   display: inline-block;
   background: white;
   color: #444;
-  width: 170px;
   border-radius: 5px;
   box-shadow: 1px 1px 1px grey;
   white-space: nowrap;
