--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -358,6 +358,8 @@ ol#hints {
   margin-top: 30px;
   font-size: 16px;
   overflow: scroll;
+  word-wrap: break-word;
+  padding-right: 10px;
   max-height: calc(100% - 220px);
 }
 
@@ -423,6 +425,11 @@ span.buttonText {
   cursor: pointer;
   text-align: center;
   width: 200px;
+}
+
+#teleport-button {
+  color: #4d90fe;
+  cursor: pointer;
 }
 
 #minimap-button-left {
