--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -478,6 +478,15 @@ span.buttonText {
   font-size: 16px;
 }
 
+#coordinates-viewer {
+  padding: 10px;
+  background-color: black;
+  opacity: 70%;
+  border-radius: 2px;
+  color: #fff;
+  font-size: 16px;
+}
+
 .wrong-input {
   position: relative;
   animation: shake .1s linear;
