--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -415,6 +415,12 @@ span.buttonText {
   font-family: 'Roboto', sans-serif;
 }
 
+#minimap {
+  height: "150px";
+  width: "200px";
+  opacity: 0.75;
+}
+
 #minimap-controls {
   padding-top: 3px;
   padding-bottom: 3px;
